--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -29,6 +29,6 @@ spec:
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
-            value: "http://backend-service-name.namespace.svc.cluster.local/api/tasks"
+            value: "http://k8s-threetie-mainlb-1dd958d0ec-1661031677.us-east-1.elb.amazonaws.com/api/tasks"
         ports:
         - containerPort: 3000
