--- a/Three-Tier-DevSecOps-Project/Kubernetes-Manifests-file/Backend/deployment.yaml
+++ b/Three-Tier-DevSecOps-Project/Kubernetes-Manifests-file/Backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 975050362406.dkr.ecr.us-east-1.amazonaws.com/backend:17
+        image: 959786390702.dkr.ecr.us-east-1.amazonaws.com/backend
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
